--- a/tictactoe/src/index.html
+++ b/tictactoe/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Tictactoe</title>
   <base href="/">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
